feat(api)!: implement jwt
